kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  selector:
    matchLabels:
      app: kafka1
  template:
    metadata:
      labels:
        app: kafka1
    spec:
      containers:
      - name: kafka1
        image: bitnami/kafka
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9092
