node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-node
  labels:
    app: node-server
spec:
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
      - name: node-server
        image: tasktrack.telekom.at/parma-poc-docker-local/graphql-poc02
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: node-port
          containerPort: 5000
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
