zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoo-deployment
spec:
  selector:
    matchLabels:
      app: zoo1
  template:
    metadata:
      labels:
        app: zoo1
    spec:
      containers:
      - name: zoo1
        image: bitnami/zookeeper
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 2181
