node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  selector:
    app: node-server
  ports:
  - name: http
    port: 5000
    targetPort: 5000
